--- a/testpay/templates/testpay/testmain.html
+++ b/testpay/templates/testpay/testmain.html
@@ -83,8 +83,8 @@
                 name: '',
                 newChnnlItem: '',
                 chnnlItems:[
-                    {id:1040001, name: '오프라인', address:'pc2app/'},
-                    {id:1040002, name: '온라인-PC to APP'},
+                    {id:1040001, name: '오프라인', address:'offline/'},
+                    {id:1040002, name: '온라인-PC to APP', address:'pc2app/'},
                     {id:1040003, name: '온라인-APP to APP'},
                     {id:1040004, name: '온라인-WEB to WEB'},
                 ],
