--- a/testpay/templates/testpay/testOffline.html
+++ b/testpay/templates/testpay/testOffline.html
@@ -52,26 +52,26 @@
 <body>
     <div id='app'>
 
-        <h1>CJ One Pay Test Page</h1>
+        <h1>CJ One Pay Test: 오프라인</h1>
         <strong>Pay API 테스트 진행</strong>
-
-        <br>
 
         <div class="inputBox">
             <input class="name" type="text" placeholder="name ..." v-model="name">
             <input class="item" type="text" placeholder="type anything welcomed ..." v-model="newChnnlItem">
             <button v-on:click="add_todo()">ADD</button>
         </div>
-    
+
         <ul class="ChnnlList">
             <li v-for="(chnnlItem, id) in chnnlItems" v-bind:key="chnnlItem.id" v-on:click="selChnnl(chnnlItem.id)">
-                <span>{chnnlItem.name}</span>                
+                <a v-bind:href="chnnlItem.address">{chnnlItem.name}</a>
+
             </li>
         </ul>
 
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script>
         var vm = new Vue({
             delimiters: ['{', '}'],
@@ -80,11 +80,13 @@
                 name: '',
                 newChnnlItem: '',
                 chnnlItems:[
-                    {id:1040001, name: '오프라인'},
+                    {id:1040001, name: '오프라인', address:'pc2app/'},
                     {id:1040002, name: '온라인-PC to APP'},
                     {id:1040003, name: '온라인-APP to APP'},
                     {id:1040004, name: '온라인-WEB to WEB'},
                 ],
+                link:'www.naver.com',
+
             },
             methods: {
                 add_todo: function() {
@@ -94,11 +96,13 @@
                 selChnnl: function(chnnlCd) {
                     if(chnnlCd == 1040001)
                         console.log("오프라인 거래");
+
                     else if(chnnlCd == 1040002)
-                        console.log("온라인-PC to APP 거래");                        
+
+                        console.log("온라인-PC to APP 거래");
+
                     else if(chnnlCd == 1040003)
                         console.log("온라인-APP to APP 거래");
-
                     else if(chnnlCd == 1040004)
                         console.log("온라인-WEB to WEB");
 
